--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ var menu = {
 var keys = {};
 
 for(var key in menu){
-	element = [];
+	element = {};
 	element[key] = menu[key];
 	keys[menu[key]] = element;
 }
